MathHelper: Added support for cross and dot multiplication symbols, replaced two horrendous if/else-jumbles with switches